<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNoteActivity">

    <EditText
        android:id="@+id/etWriteNote"
        android:layout_width="321dp"
        android:layout_height="285dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="28dp"
        android:background="@null"
        android:ems="10"
        android:gravity="top"
        android:hint="Write Here..."
        android:inputType="text"
        android:singleLine="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spNoteClr"
        android:layout_width="203dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TextPriority" />

    <TextView
        android:id="@+id/TextPriority"
        android:layout_width="84dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="35dp"
        android:text="Priority :"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etKeywords"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:hint="Enter Keywords:"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWriteNote" />

    <ImageButton
        android:id="@+id/btnCancelNewNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="35dp"
        android:background="@color/background_material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etKeywords"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageButton
        android:id="@+id/btnImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="17dp"
        android:background="@color/background_material"
        app:layout_constraintEnd_toStartOf="@+id/btnCancelNewNote"
        app:layout_constraintTop_toBottomOf="@+id/etKeywords"
        app:srcCompat="@android:drawable/stat_sys_download" />

    <ImageButton
        android:id="@+id/btnExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="17dp"
        android:background="@color/background_material"
        app:layout_constraintEnd_toStartOf="@+id/btnImport"
        app:layout_constraintTop_toBottomOf="@+id/etKeywords"
        app:srcCompat="@android:drawable/stat_sys_upload" />

</android.support.constraint.ConstraintLayout>